--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,6 @@
   "dependencies": {
     "requirejs": "~2.1.8",
     "jquery": "~2.0.3",
-    "cobalt-js": "~0.0.2",
-    "almond": "~0.2.6"
+    "cobalt-js": "~0.1.0"
   }
 }
