--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "grunt": "~0.4.1",
     "grunt-requirejs": "~0.4.0",
     "grunt-contrib-jshint": "~0.6.4",
-    "grunt-contrib-uglify": "~0.2.4"
+    "grunt-contrib-uglify": "~0.2.4",
+    "grunt-ngmin": "0.0.3"
   }
 }
