--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "grunt-ngmin": "0.0.3",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-copy": "~0.4.1",
-    "grunt-contrib-concat": "~0.3.0"
+    "grunt-contrib-concat": "~0.3.0",
+    "matchdep": "~0.1.2"
   }
 }
